src/components/BuildingsList/BuildingsList.scss
html,body{overflow-y: scroll; }
.e445_9290 { 
	overflow:hidden;
  	width: 375px;
	height: 215px;
	margin-left: auto;
	margin-right: auto;
    position: relative;
    // box-shadow:0px 8px 12px rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 0.20000000298023224);
}
.e445_9290 { 
	width:335px;
	height:656px;
	position:relative;
	
}
.e445_9291 { 
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:0px;
}
.ei445_9291_75_251 { 
	box-shadow:0px 8px 12px rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 0.20000000298023224);
	background-color:rgba(255, 255, 255, 1);
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:0px;
	border-top-left-radius:12px;
	border-top-right-radius:12px;
	border-bottom-left-radius:12px;
	border-bottom-right-radius:12px;
}
.ei445_9291_75_253 { 
	color:rgba(31.000000052154064, 31.000000052154064, 57.00000040233135, 1);
	width:108px;
	height:21px;
	position:absolute;
	left:117px;
	top:13px;
	font-family:Poppins;
	text-align:left;
	font-size:14px;
	letter-spacing:0;
}
.ei445_9291_75_254 { 
	color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:107px;
	height:18px;
	position:absolute;
	left:133px;
	top:36px;
	font-family:Poppins;
	text-align:left;
	font-size:12px;
	letter-spacing:0;
}
.ei445_9291_75_255 { 
	width:12px;
	height:12px;
	position:absolute;
	left:117px;
	top:39px;
}
.ei445_9291_75_255_44_2222 { 
	background-color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:8.5px;
	height:10px;
	position:absolute;
	left:1.5px;
	top:1px;
}
.ei445_9291_134_507 { 
	width:77px;
	height:24px;
	position:absolute;
	left:117px;
	top:56px;
}
.ei445_9291_75_256 { 
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
}
.ei445_9291_75_258 { 
	color:rgba(61.16404116153717, 92.17780977487564, 255, 1);
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
	font-family:Poppins;
	text-align:left;
	font-size:16px;
	letter-spacing:0;
}
.e445_9292 { 
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:112px;
}
.ei445_9292_75_251 { 
	box-shadow:0px 8px 12px rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 0.20000000298023224);
	background-color:rgba(255, 255, 255, 1);
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:0px;
	border-top-left-radius:12px;
	border-top-right-radius:12px;
	border-bottom-left-radius:12px;
	border-bottom-right-radius:12px;
}
.ei445_9292_75_253 { 
	color:rgba(31.000000052154064, 31.000000052154064, 57.00000040233135, 1);
	width:104px;
	height:21px;
	position:absolute;
	left:117px;
	top:13px;
	font-family:Poppins;
	text-align:left;
	font-size:14px;
	letter-spacing:0;
}
.ei445_9292_75_254 { 
	color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:88px;
	height:18px;
	position:absolute;
	left:133px;
	top:36px;
	font-family:Poppins;
	text-align:left;
	font-size:12px;
	letter-spacing:0;
}
.ei445_9292_75_255 { 
	width:12px;
	height:12px;
	position:absolute;
	left:117px;
	top:39px;
}
.ei445_9292_75_255_44_2222 { 
	background-color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:8.5px;
	height:10px;
	position:absolute;
	left:1.5px;
	top:1px;
}
.ei445_9292_134_507 { 
	width:77px;
	height:24px;
	position:absolute;
	left:117px;
	top:56px;
}
.ei445_9292_75_256 { 
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
}
.ei445_9292_75_258 { 
	color:rgba(61.16404116153717, 92.17780977487564, 255, 1);
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
	font-family:Poppins;
	text-align:left;
	font-size:16px;
	letter-spacing:0;
}
.e445_9293 { 
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:224px;
}
.ei445_9293_75_251 { 
	box-shadow:0px 8px 12px rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 0.20000000298023224);
	background-color:rgba(255, 255, 255, 1);
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:0px;
	border-top-left-radius:12px;
	border-top-right-radius:12px;
	border-bottom-left-radius:12px;
	border-bottom-right-radius:12px;
}
.ei445_9293_75_253 { 
	color:rgba(31.000000052154064, 31.000000052154064, 57.00000040233135, 1);
	width:113px;
	height:21px;
	position:absolute;
	left:117px;
	top:13px;
	font-family:Poppins;
	text-align:left;
	font-size:14px;
	letter-spacing:0;
}
.ei445_9293_75_254 { 
	color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:76px;
	height:18px;
	position:absolute;
	left:133px;
	top:36px;
	font-family:Poppins;
	text-align:left;
	font-size:12px;
	letter-spacing:0;
}
.ei445_9293_75_255 { 
	width:12px;
	height:12px;
	position:absolute;
	left:117px;
	top:39px;
}
.ei445_9293_75_255_44_2222 { 
	background-color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:8.5px;
	height:10px;
	position:absolute;
	left:1.5px;
	top:1px;
}
.ei445_9293_134_507 { 
	width:77px;
	height:24px;
	position:absolute;
	left:117px;
	top:56px;
}
.ei445_9293_75_256 { 
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
}
.ei445_9293_75_258 { 
	color:rgba(61.16404116153717, 92.17780977487564, 255, 1);
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
	font-family:Poppins;
	text-align:left;
	font-size:16px;
	letter-spacing:0;
}
.e713_859 { 
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:336px;
}
.ei713_859_75_251 { 
	box-shadow:0px 8px 12px rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 0.20000000298023224);
	background-color:rgba(255, 255, 255, 1);
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:0px;
	border-top-left-radius:12px;
	border-top-right-radius:12px;
	border-bottom-left-radius:12px;
	border-bottom-right-radius:12px;
}
.ei713_859_75_253 { 
	color:rgba(31.000000052154064, 31.000000052154064, 57.00000040233135, 1);
	width:113px;
	height:21px;
	position:absolute;
	left:117px;
	top:13px;
	font-family:Poppins;
	text-align:left;
	font-size:14px;
	letter-spacing:0;
}
.ei713_859_75_254 { 
	color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:76px;
	height:18px;
	position:absolute;
	left:133px;
	top:36px;
	font-family:Poppins;
	text-align:left;
	font-size:12px;
	letter-spacing:0;
}
.ei713_859_75_255 { 
	width:12px;
	height:12px;
	position:absolute;
	left:117px;
	top:39px;
}
.ei713_859_75_255_44_2222 { 
	background-color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:8.5px;
	height:10px;
	position:absolute;
	left:1.5px;
	top:1px;
}
.ei713_859_134_507 { 
	width:77px;
	height:24px;
	position:absolute;
	left:117px;
	top:56px;
}
.ei713_859_75_256 { 
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
}
.ei713_859_75_258 { 
	color:rgba(61.16404116153717, 92.17780977487564, 255, 1);
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
	font-family:Poppins;
	text-align:left;
	font-size:16px;
	letter-spacing:0;
}
.e713_871 { 
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:448px;
}
.ei713_871_75_251 { 
	box-shadow:0px 8px 12px rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 0.20000000298023224);
	background-color:rgba(255, 255, 255, 1);
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:0px;
	border-top-left-radius:12px;
	border-top-right-radius:12px;
	border-bottom-left-radius:12px;
	border-bottom-right-radius:12px;
}
.ei713_871_75_253 { 
	color:rgba(31.000000052154064, 31.000000052154064, 57.00000040233135, 1);
	width:113px;
	height:21px;
	position:absolute;
	left:117px;
	top:13px;
	font-family:Poppins;
	text-align:left;
	font-size:14px;
	letter-spacing:0;
}
.ei713_871_75_254 { 
	color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:76px;
	height:18px;
	position:absolute;
	left:133px;
	top:36px;
	font-family:Poppins;
	text-align:left;
	font-size:12px;
	letter-spacing:0;
}
.ei713_871_75_255 { 
	width:12px;
	height:12px;
	position:absolute;
	left:117px;
	top:39px;
}
.ei713_871_75_255_44_2222 { 
	background-color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:8.5px;
	height:10px;
	position:absolute;
	left:1.5px;
	top:1px;
}
.ei713_871_134_507 { 
	width:77px;
	height:24px;
	position:absolute;
	left:117px;
	top:56px;
}
.ei713_871_75_256 { 
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
}
.ei713_871_75_258 { 
	color:rgba(61.16404116153717, 92.17780977487564, 255, 1);
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
	font-family:Poppins;
	text-align:left;
	font-size:16px;
	letter-spacing:0;
}
.e713_883 { 
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:560px;
}
.ei713_883_75_251 { 
	box-shadow:0px 8px 12px rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 0.20000000298023224);
	background-color:rgba(255, 255, 255, 1);
	width:335px;
	height:96px;
	position:absolute;
	left:0px;
	top:0px;
	border-top-left-radius:12px;
	border-top-right-radius:12px;
	border-bottom-left-radius:12px;
	border-bottom-right-radius:12px;
}
.ei713_883_75_253 { 
	color:rgba(31.000000052154064, 31.000000052154064, 57.00000040233135, 1);
	width:113px;
	height:21px;
	position:absolute;
	left:117px;
	top:13px;
	font-family:Poppins;
	text-align:left;
	font-size:14px;
	letter-spacing:0;
}
.ei713_883_75_254 { 
	color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:76px;
	height:18px;
	position:absolute;
	left:133px;
	top:36px;
	font-family:Poppins;
	text-align:left;
	font-size:12px;
	letter-spacing:0;
}
.ei713_883_75_255 { 
	width:12px;
	height:12px;
	position:absolute;
	left:117px;
	top:39px;
}
.ei713_883_75_255_44_2222 { 
	background-color:rgba(184.00000423192978, 184.00000423192978, 210.00000268220901, 1);
	width:8.5px;
	height:10px;
	position:absolute;
	left:1.5px;
	top:1px;
}
.ei713_883_134_507 { 
	width:77px;
	height:24px;
	position:absolute;
	left:117px;
	top:56px;
}
.ei713_883_75_256 { 
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
}
.ei713_883_75_258 { 
	color:rgba(61.16404116153717, 92.17780977487564, 255, 1);
	width:77px;
	height:24px;
	position:absolute;
	left:0px;
	top:0px;
	font-family:Poppins;
	text-align:left;
	font-size:16px;
	letter-spacing:0;
}

